Remove module exports from maven testing